--- a/WORDPRESS_SITE/docker-compose.yml
+++ b/WORDPRESS_SITE/docker-compose.yml
@@ -4,25 +4,28 @@ services:
   #Database
   db:
     image: mysql:5.7
-    #volumes maps the specified folder(starting point of the folder addres is where the docker-compose.yml is located) onto a location inside the docker container. everything before the ':' refers to the locations of your PC and everything after the ':' refers to the location in the container. Maping means that everything that happens in the PC directory will be reflected in the container directory. 
+    #volumes, maps the specified folder(starting point of the folder addres is where the docker-compose.yml is located) onto a location inside the docker container. everything before the ':' refers to the locations of your PC and everything after the ':' refers to the location in the container. Maping means that everything that happens in the PC directory will be reflected in the container directory. 
     ##########
     volumes: 
       - db_data:/var/lib/mysql
 
     restart: always
     environment: 
+      #when accessing the database, the username is root by default, below the password for the user 'root' is specified at MYSQL_ROOT_PASSWORD. check mydbfile.php file to see how to connect to the database.
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: wordpress
       MYSQL_USER: wordpress
       MYSQL_PASSWORD: wordpress
     networks:
       - wpsite
-  #phpmyadmin
+  #setup phpmyadmin interface
   phpmyadmin:
+    #specify the database layed out above to run in the interface
     depends_on:
       - db
     image: phpmyadmin/phpmyadmin
     restart: always
+    #this port is not to serve the database, it is used to access the phpmyadmin interface, the db port is served as a default on port 3306
     ports: 
       - '8080:80'
     environment: 
@@ -30,7 +33,7 @@ services:
       MYSQL_ROOT_PASSWORD: password
     networks:
      - wpsite
-  #Wordpress
+  #setup the wordpress server
   wordpress: 
     depends_on:
       - db
@@ -38,7 +41,6 @@ services:
     ports:
       - '8000:80'
     restart: always
-    ########
     volumes: ['./:/var/www/html']
 
     environment: 
